--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,7 +54,7 @@
     <color name="color3">#2889a4</color>
     <color name="color4">#f3456f</color>
 
-    <color name="tim">#2E153C</color>
+    <color name="tim">#37003f</color>
     <color name="pink1">#EE9CA7</color>
     <color name="pink2">#FFDDE1</color>
 
