--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:fontFamily">@font/product_sans</item>
         <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:textColor">#ffffff</item>
     </style>
 
     <style name="MainTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -15,6 +16,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:fontFamily">@font/product_sans</item>
         <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="TabTheme" parent="TextAppearance.Design.Tab">
