--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,7 @@
         android:background="@color/pink1"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         app:tabGravity="fill"
+        app:tabIndicatorColor="@color/colorPrimary"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/tim"
         app:tabTextAppearance="@style/TabTheme">
