--- a/app/src/main/res/layout/widget_chathead.xml
+++ b/app/src/main/res/layout/widget_chathead.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/info_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:src="@mipmap/ic_launcher" />
+    android:background="@drawable/bg_bot"
+    android:padding="20dp">
+
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_send" />
+</LinearLayout>
+
